# score-addon-acousmoscribe

./: CMakeLists.txt  README.md  score_addon_acousmoscribe.cpp  score_addon_acousmoscribe.hpp
Acousmoscribe/: Executor.cpp  Executor.hpp  Layer.hpp  LocalTree.cpp  LocalTree.hpp  MelodicKeyView.cpp  MelodicKeyView.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  SignView.cpp  SignView.hpp  SpectralKeyView.cpp  SpectralKeyView.hpp  View.cpp  View.hpp
Acousmoscribe/Commands/: AddKey.cpp  AddKey.hpp  AddSign.cpp  AddSign.hpp  ChangeMelodicKey.cpp  ChangeMelodicKey.hpp  ChangeProfile.cpp  ChangeProfile.hpp  ChangeSign.cpp  ChangeSign.hpp  ChangeSpectralKey.cpp  ChangeSpectralKey.hpp  CommandFactory.hpp  MoveSigns.cpp  MoveSigns.hpp  RemoveSigns.cpp  RemoveSigns.hpp  ScaleSigns.cpp  ScaleSigns.hpp
Acousmoscribe/Inspector/: Inspector.cpp  Inspector.hpp
Acousmoscribe/Model/: DynamicProfile.cpp  DynamicProfile.hpp  DynamicProfileNotuse.cpp  DynamicProfileNotuse.hpp  Grain.hpp  MelodicKey.cpp  MelodicKey.hpp  MelodicProfile.cpp  MelodicProfile.hpp  Process.cpp  RhythmicProfile.cpp  RhythmicProfile.hpp  RythmicProfile.cpp  Sign.cpp  Sign.hpp  SpectralKey.cpp  SpectralKey.hpp
Acousmoscribe/Presenter/: Presenter.cpp  Presenter.hpp
Acousmoscribe/View/: MelodicKeyView.cpp  MelodicKeyView.hpp  SignView.cpp  SignView.hpp  SpectralKeyView.cpp  SpectralKeyView.hpp  View.cpp  View.hpp
Acousmoscribe/testModel/: Makefile  testModel.cpp  testModel.hpp
Skeleton/: Inspector.cpp  Metadata.hpp  View.cpp  View.hpp
